--- a/personal_website/src/loading_screen/loading_screen.css
+++ b/personal_website/src/loading_screen/loading_screen.css
@@ -43,7 +43,7 @@
   width: 80px;
   height: 80px;
   border-radius: 50%;
-  background-color: #6d1f7e;
+  background-color: #00b4d8;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -68,7 +68,7 @@
   height: 8px;
   margin: 0 4px;
   border-radius: 50%;
-  background-color: #6d1f7e;
+  background-color: #00b4d8;
   animation: bounce 0.5s ease-in-out infinite;
 }
 
